--- a/src/assets/style/formlogin.css
+++ b/src/assets/style/formlogin.css
@@ -1,4 +1,75 @@
+*{
+    box-sizing: border-box;
+}
+
+body{
+    
+    background: #c5c5c5;
+    font-family: "Lucida Console", Courier, monospace;
+    
+}
+
+.form-login {
+
+    background-color: #829191;
+    margin-top: 5%;
+    margin-left: 40%;
+    margin-right: 40%;
+    padding: 10px;
+}
 .img-logo{
+
     width: 100px;
     height: 100px;
+    border-radius: 50%;
+    margin-left: 33%;
+    
 }
+
+input{
+    border: 0;
+    width: 280px;
+
+}
+
+.input-username{
+    border: solid 1px #ccc;
+    padding: 10px;
+
+}
+
+.input-password{
+    border: solid 1px #ccc;
+    padding: 10px;
+
+}
+
+.button-login {
+    display: block;
+    padding: 5px 15px;
+    font-size: 12px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #;
+    background-color: #ff5e5b;
+    margin-top: 10%;
+    margin-left: 30%;
+    border-radius: 10px;
+    
+  }
+  
+  .button-login:active {
+    background-color: #ff0e0a;
+
+  }
+
+  .link-reg {
+        font-size:14px;
+        margin-left: 9%;
+        color: #002CCF;
+
+  }
+
+  </style>
